--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
                     <p>Como foi seu serviço?</p>
                 </label>
                 <p>
-                    <select name="serviceQual" id="serviceQual" class="formInput" required>
+                    <select name="serviceQual" id="serviceQual" class="formInput">
                         <option disable selected value="0">-- Escolha uma opção</option>
                         <option value="0.3">30% - Incrível</option>
                         <option value="0.2">20% - Bom</option>
