--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 <body>
     <div id="container">
         <div>
-            <h1 class="tittle">Calculadora de gorgetas</h1>
+            <h1 class="tittle">Calculadora de gorjetas</h1>
         </div>
         <div>
             <form class="tipsForm" id="tipsForm">
@@ -47,7 +47,7 @@
             </form>
         </div>
         <div id="totalTip">
-            Gorgeta Total:
+            Gorjeta Total:
             R$ <span id="tip">0.00</span>
             <span id="each">cada</span>
         </div>
